<resources>
    <string name="app_name">WMS收货</string>
    <string name="title_activity_main">MainActivity</string>

    <!--LoginActivity-->
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="tips_environment">请选择环境[当前是：%1$s]</string>
    <string name="str_psw">frxs@123</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="authentication_failed">Token失效，请重新登录！</string>

    <!--VendorReceivingActivity-->
    <string name="finish_receive">完成收货</string>
    <string name="received_num">数量：%1$d</string>
    <string name="total_product_row">已选：%1$d行</string>
    <string name="total_product_num">数量：%1$s</string>
    <string name="key_receive_num">整份收货：</string>
    <string name="product_package_num">包装数：%1$d</string>
    <string name="product_receivable_num">可收货数：%1$s</string>
    <string name="product_stock_num">当前库存：%1$d</string>
    <string name="product_barcode">条码：%1$s</string>
    <string name="product_code">编码：%1$s</string>
    <string name="switch_unit">切换单位</string>
    <string name="search">搜索</string>
    <string name="search_hint">输入商品名称、商品条码、编码</string>
    <string name="confirm_exit">是否终止本次收货？</string>
    <string name="item_unit">%1$s (%2$d%3$s)</string>

    <!--ReceivedListFragment-->
    <string name="stock_in_id">单号：%1$s</string>
    <string name="warehouse">仓库：%1$s</string>
    <string name="suppler">供应商：%1$s</string>
    <string name="receiving_date">制单日期：%1$s</string>
    <string name="receiving_clerk">制单人：%1$s</string>
    <string name="product">商品</string>
    <string name="product_num">数量</string>
    <string name="product_unit">单位</string>
    <string name="product_type_num">品项：%1$d</string>
    <string name="amount">合计：%1$s</string>
    <string name="receiver">收货员：%1$s</string>
    <string name="leader_sign">组长签字：</string>

    <!-- 在线更新 -->
    <string name="updade_content">最新版本：%1$s \n\n更新内容\n%2$s</string>
    <string name="update_title">发现版本更新</string>
    <string name="update_ok">立即更新</string>
    <string name="update_cancel">稍后更新</string>

    <!-- 关于我 -->
    <string name="title_mine">关于我</string>
    <string name="tv_login_out">退出用户</string>
    <string name="tv_change_password">用户修改密码</string>
    <string name="tv_version_update">版本更新</string>
    <string name="can_not_find_version_name">(暂无版本号)</string>
    <string name="setting_bluetooth">设置蓝牙</string>
    <string name="title_update_pwd">修改密码</string>
    <string name="exit_query">是否退出收货员？</string>

    <!--UpdatePswActivity-->
    <string name="hint_old_password">请输入原密码</string>
    <string name="hint_new_password">请输入新密码</string>
    <string name="hint_repeat_new_password">请再次输入新密码</string>
    <string name="tips_null_account">您还没有填写账号</string>
    <string name="tips_null_password">您还没有填写密码</string>
    <string name="tips_input_limit">密码只能由数字、字母组成</string>
    <string name="tips_new_password_error">新密码确认错误</string>

    <!--ReceivedListFragment-->
    <string name="title_received_list">收货明细</string>
    <string name="order_received_qty">实收：%1$s</string>
    <string name="order_qty">入库单数量：%1$d</string>
    <string name="order_id">单号：%1$s</string>

    <!--RecivedOrderDetalisActivity-->
    <string name="title_order_detalis">订单明细</string>
</resources>
