<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_normal">

    <TextView
        android:id="@+id/product_name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_large"
        android:text="商品名称"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/product_barcode_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/product_barcode"
            android:textSize="@dimen/font_normal"/>

        <TextView
            android:id="@+id/product_code_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_code"
            android:textSize="@dimen/font_normal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_tiny"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/product_receivable_num_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_receivable_num"
                    android:textSize="@dimen/font_normal"/>

                <TextView
                    android:id="@+id/product_package_num_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/product_package_num"
                    android:textSize="@dimen/font_normal"/>
            </LinearLayout>

            <TextView
                android:id="@+id/product_stock_num_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_tiny"
                android:gravity="center"
                android:text="@string/product_stock_num"
                android:textSize="@dimen/font_normal"/>

        </LinearLayout>

        <Button
            android:id="@+id/switch_unit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_unit"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_receive_num"
            android:textColor="@color/frxs_gray"
            android:textSize="@dimen/font_normal" />

        <com.frxs.common_base.widget.CountEditText
            android:id="@+id/edit_count_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/receive_unit_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/frxs_gray"
            android:layout_marginLeft="@dimen/spacing_small"
            android:textSize="@dimen/font_normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_large"
        android:layout_marginRight="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginBottom="@dimen/spacing_small"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/confirm_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/spacing_large"
            android:text="@string/confirm"/>

    </LinearLayout>

</LinearLayout>