<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/view_search_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dividerColor"/>

    <TextView
        android:id="@+id/vendor_info_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_small"
        android:textSize="@dimen/font_large"
        android:text=""/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dividerColor"/>

    <com.yanzhenjie.recyclerview.swipe.SwipeMenuRecyclerView
        android:id="@+id/received_product_lv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dividerColor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/spacing_small"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/total_row_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/total_product_row"/>

            <TextView
                android:id="@+id/total_product_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/total_product_num"
                android:layout_marginLeft="@dimen/spacing_small"/>

        </LinearLayout>

        <Button
            android:id="@+id/action_done_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/colorPrimary"
            android:textSize="18sp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@android:color/white"
            android:text="@string/finish_receive"/>

    </LinearLayout>

</LinearLayout>